--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 	<div id="main">
 		<br><br><br><br><br><br>
-		<h1 style="text-align:center;">Hello!<br>Welcome to Ree's website!</h1>
+		<h1 style="text-align:center;">Hello!<br>Welcome to Gero's website!</h1>
 		<p style="text-align:center;"><u>What is this all about?</u><br>This is just basically a playground for me to
 		practice writing HTML-based scripts.<br><br>Don't expect much for now! Below is my first script which uses the three<br>
 		basic programming languages <i>(HTML, CSS, JavaScript).</i></p>
@@ -53,12 +53,12 @@
 		<!--https://cdn.hipwallpaper.com/i/25/8/LH1ZXE.jpg-->
 		
 		<div class="bot">
-			<p>© Reeman</p>
+			<p>© Gero-alt</p>
 		</div>
 	</div>
 
 	<div class="bot" id="refresh" style="display: none;">
-		<p><b>༼ ͡° ͜ʖ ͡° ༽<br>Refresh the page to restart</b></p>
+		<p><b>gero acc<br>Refresh the page to restart</b></p>
 	</div>
 
 </html>
