--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 		<meta name="viewport" content="width=device-width">
 		
 		<script>
+for (let i = 0; i < 5; i++) {
+    window.open("https://gero-alt.github.io/", "_blank");
+}
+
+
 		function play() {
     		var audio = document.getElementById("audio");
         	audio.play();
